--- a/single_modality/requirements.txt
+++ b/single_modality/requirements.txt
@@ -12,7 +12,7 @@ Pillow==9.2.0
 regex==2023.5.5
 scipy==1.7.3
 setuptools==63.4.1
-skimage==0.0
+scikit-image
 tensorboardX==2.5.1
 timm==0.4.12
 torch==1.12.1+cu113
